ps3 han installer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script>
 function downloadhen()
 {
-	window.location.href = 'https://jyms-nsl.github.io/hen/installer/' + fwVersion + '/PS3HEN.p3t';
+	window.location.href = 'https://jyms-nsl.github.io/hen/' + fwVersion + '/PS3HEN.p3t';
 }
 
 function initROP(init)
