--- a/installer/index.html
+++ b/installer/index.html
@@ -7,11 +7,11 @@
 <script>
 function downloadhen()
 {
-	window.location.href = 'https://jyms-nsl.github.io/hen/' + fwVersion + '/PS3HEN.p3t';
+	window.location.href = 'http://jyms-nsl.github.io/hen/' + fwVersion + '/PS3HEN.p3t';
 }
 function downloadhenD()
 {
-	window.location.href = 'https://jyms-nsl.github.io/hen/' + fwVersion + 'D/PS3HEN.p3t';
+	window.location.href = 'http://jyms-nsl.github.io/hen/' + fwVersion + 'D/PS3HEN.p3t';
 }
 
 function initROP(init)
